@@ -38,13 +38,15 @@
 #define HAVE_DOS_BASED_FILE_SYSTEM 1
 #define HAVE_CASE_INSENSITIVE_FILE_SYSTEM 1
 
+#define HAS_DRIVE_SPEC(f)	((f)[0] && ((f)[1] == ':'))
+#define STRIP_DRIVE_SPEC(f)	((f) + 2)
 #define IS_DIR_SEPARATOR(c)	((c) == '/' || (c) == '\\')
 #define DIR_SEPARATOR_CHAR	'\\' /* both '/' and '\\' work.  */
 /* Note that IS_ABSOLUTE_PATH accepts d:foo as well, although it is
    only semi-absolute.  This is because the users of IS_ABSOLUTE_PATH
    want to know whether to prepend the current working directory to
    a file name, which should not be done with a name like d:foo.  */
-#define IS_ABSOLUTE_PATH(f)	(IS_DIR_SEPARATOR((f)[0]) || (((f)[0]) && ((f)[1] == ':')))
+#define IS_ABSOLUTE_PATH(f)	(IS_DIR_SEPARATOR((f)[0]) || HAS_DRIVE_SPEC((f)))
 
 #ifdef __cplusplus
 static inline char *FIND_FIRST_DIRSEP(char *_the_path) {
@@ -102,6 +104,8 @@ static inline char *FIND_LAST_DIRSEP (const char *_the_path) {
 #elif defined(__amigados__) || defined(__amigaos4__) || defined(__AMIGA) || \
 	defined(__amigaos__) || defined(__MORPHOS__) || defined(__AROS__)
 
+#define HAS_DRIVE_SPEC(f)	(0) /* */
+#define STRIP_DRIVE_SPEC(f)	(f) /* */
 #define IS_DIR_SEPARATOR(c)	((c) == '/' || (c) == ':')
 #define DIR_SEPARATOR_CHAR	'/'
 #define IS_ABSOLUTE_PATH(f)	(IS_DIR_SEPARATOR((f)[0]) || (strchr((f), ':')))
@@ -147,6 +151,8 @@ static inline char *FIND_LAST_DIRSEP (const char *_the_path) {
 #define IS_DIR_SEPARATOR(c)	((c) == '/')
 #define DIR_SEPARATOR_CHAR	'/'
 #define IS_ABSOLUTE_PATH(f)	(IS_DIR_SEPARATOR((f)[0]))
+#define HAS_DRIVE_SPEC(f)	(0)
+#define STRIP_DRIVE_SPEC(f)	(f)
 
 #ifdef __cplusplus
 static inline char *FIND_FIRST_DIRSEP(char *_the_path) {
